Handle case where we want to exclude all field names in config so that the entire section is not show, and we don't look for mismatches on excluded field names. Update and create a few images.

--- a/UnityPerformanceBenchmarkReporter/Report/styles.css
+++ b/UnityPerformanceBenchmarkReporter/Report/styles.css
@@ -354,7 +354,7 @@ pre {
 }
 
 .disabledContainerLabel {
-    font-size: 1.25vh important !;
+    font-size: 1.25vh;
     display: block;
     font-weight: bold;
     position: relative;
